// Jest Snapshot v1, https://goo.gl/fbAQLP


exports[`render should merge default props and call comp 1`] = `
Object {
  "prop1": "prop1",
  "prop2": "prop2",
}
`;

exports[`render should merge default props and call comp 2`] = `
Object {
  "prop1": "prop1",
  "prop2": false,
}
`;

exports[`render should only validate when the propType is a function 1`] = `
Object {
  "prop1": "prop1",
  "prop2": "prop2",
}
`;
